Ensure focus on WooCommerce gallery image is visible.

--- a/resources/assets/scss/modules/woocommerce-single-product-gallery.scss
+++ b/resources/assets/scss/modules/woocommerce-single-product-gallery.scss
@@ -100,6 +100,8 @@
 }
 
 .woocommerce-product-gallery__image {
+	margin: -4px;
+	padding: 4px;
 
 	a,
 	img {
